# ZealFS

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: common.h  mbr.h  zealfs_v1.h  zealfs_v2.h
src/: mbr.c  zealfs.h  zealfs_fuse.c  zealfs_main.c  zealfs_v1.c  zealfs_v2.c
